make pages responsive

--- a/frontEnd/src/App.css
+++ b/frontEnd/src/App.css
@@ -9,7 +9,8 @@ body{
     justify-content: center;
     align-items: center;
     height: 100vh;
-    background: gray; 
+    background: linear-gradient(to right, #6b11cbd2, #2574fcc1);
+
 }
 
 .app-title{
