--- a/frontEnd/src/styles/LoginForm.module.css
+++ b/frontEnd/src/styles/LoginForm.module.css
@@ -1,51 +1,109 @@
-.loginForm {
-    width: 400px;
-    height: 35vh;
-    margin: auto;
+.loginContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65vh;
+    font-family: 'Arial', sans-serif;
     padding: 20px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    background-color: #f9f9f9;
 }
 
-.fieldset {
-    border: none;
-    padding: 0;
+.loginForm {
+    background: white;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    width: 100%;
+    min-width: 300px;
+    max-width: 500px;
 }
 
-.legend {
-    font-size: 1.5em;
-    margin-bottom: 10px;
+.formTitle {
+    text-align: center;
+    font-size: 2em;
+    color: #333;
+    margin-bottom: 20px;
 }
 
 .formGroup {
-    margin-bottom: 15px;
+    margin-bottom: 20px;
 }
 
-label {
+.label {
     display: block;
     margin-bottom: 5px;
+    font-weight: bold;
+    color: #555;
 }
 
-input {
+.input {
     width: 100%;
-    padding: 8px;
+    padding: 12px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-}
-
-button {
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #007bff;
-    color: white;
+    border-radius: 5px;
     font-size: 16px;
-    cursor: pointer;
-    margin-top: 10px;
 }
 
-button:hover {
-    background-color: #0056b3;
-}   
+.input:focus {
+    border-color: #2575fc;
+    outline: none;
+    box-shadow: 0 0 5px rgba(37, 117, 252, 0.5);
+}
+
+.loginButton {
+    width: 100%;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    background: #2575fc;
+    color: white;
+    font-size: 18px;
+    cursor: pointer;
+    transition: background 0.3s ease;
+}
+
+.loginButton:hover {
+    background: #1d61cc;
+}
+
+@media (max-width: 768px) {
+    .loginForm {
+        width: 70%;
+        padding: 30px;
+    }
+
+    .formTitle {
+        font-size: 1.8em;
+    }
+
+    .input {
+        font-size: 14px;
+        padding: 10px;
+    }
+
+    .loginButton {
+        font-size: 16px;
+        padding: 10px;
+    }
+}
+
+@media (max-width: 480px) {
+    .loginForm {
+        width: 90%;
+        padding: 30px;
+      
+    }
+
+    .formTitle {
+        font-size: 1.5em;
+    }
+
+    .input {
+        font-size: 12px;
+        padding: 8px;
+    }
+
+    .loginButton {
+        font-size: 14px;
+        padding: 8px;
+    }
+}
