--- a/frontEnd/src/styles/SignupForm.module.css
+++ b/frontEnd/src/styles/SignupForm.module.css
@@ -3,9 +3,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 100%;
-    min-width: 300px;
-    max-width: 700px;
+    height: 60vh;
     padding: 25px;
     margin-top: -65px ;
     border-radius: 10px;
