--- a/frontEnd/src/styles/ForgotPassword.module.css
+++ b/frontEnd/src/styles/ForgotPassword.module.css
@@ -1,31 +1,44 @@
-/* .container {
-    max-width: 400px;
-    margin: 0 auto;
-    padding: 20px;
-    border: 1px solid #ccc;
+.container {
+   max-width: 600px;
+    width : 100%;
+    height: 40vh;
+    margin: 50px auto;
+    padding: 30px;
+    border: 1px solid #ddd;
     border-radius: 8px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
-}
-
-.form {
+  }
+  
+  .header {
+    margin-bottom: 20px;
+    color: #333;
+  }
+  
+  .form {
     display: flex;
     flex-direction: column;
-    gap: 10px;
-}
-
-input {
+    align-items: center;
+  }
+  
+  .label {
+    margin-bottom: 10px;
+    font-weight: bold;
+  }
+  
+  .input {
+    width: 100%;
     padding: 10px;
-    font-size: 16px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-}
-
-button {
-    padding: 10px;
-    font-size: 16px;
-    background-color: #007bff;
-    color: #fff;
+    margin-bottom: 10px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+  }
+  
+  .button {
+    padding: 10px 20px;
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
+    background: #007BFF;
+    color: #fff;
     cursor: pointer;
-} */
+  }
